--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "The Pomodoro technique with more flexibility",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "webpack"
   },
   "repository": {
     "type": "git",
@@ -18,5 +19,9 @@
   "bugs": {
     "url": "https://github.com/Crissdot/Pomodoro-Plus/issues"
   },
-  "homepage": "https://github.com/Crissdot/Pomodoro-Plus#readme"
+  "homepage": "https://github.com/Crissdot/Pomodoro-Plus#readme",
+  "devDependencies": {
+    "webpack": "^5.20.2",
+    "webpack-cli": "^4.5.0"
+  }
 }
