--- a/package.json
+++ b/package.json
@@ -21,6 +21,9 @@
   },
   "homepage": "https://github.com/Crissdot/Pomodoro-Plus#readme",
   "devDependencies": {
+    "css-loader": "^5.0.1",
+    "html-webpack-plugin": "^5.0.0",
+    "mini-css-extract-plugin": "^1.3.5",
     "webpack": "^5.20.2",
     "webpack-cli": "^4.5.0"
   }
