--- a/.travis.yml
+++ b/.travis.yml
@@ -11,11 +11,10 @@ script:
 deploy:
   provider: pages
   edge: true
-  skip-cleanup: true
-  keep-history: true
-  github-token: $GITHUB_TOKEN
-  local-dir: dist/
-  target-branch: gh-pages
+  keep_history: true
+  github_token: $GITHUB_TOKEN
+  local_dir: dist/
+  target_branch: gh-pages
   commit_message: "Deploy Release"
   on:
-    branch: master
+    tags: true
