update travis configuration

--- a/.travis.yml
+++ b/.travis.yml
@@ -16,5 +16,6 @@ deploy:
   local_dir: dist/
   target_branch: gh-pages
   commit_message: "Deploy Release"
+  if: tag IS present
   on:
     tags: true
