--- a/.travis.yml
+++ b/.travis.yml
@@ -10,12 +10,12 @@ script:
   - npm run build
 deploy:
   provider: pages
-  edge: true
+  skip_cleanup: true
   keep_history: true
   github_token: $GITHUB_TOKEN
   local_dir: dist/
   target_branch: gh-pages
   commit_message: "Deploy Release"
-  if: tag IS present
   on:
     tags: true
+    branch: master
