--- a/.travis.yml
+++ b/.travis.yml
@@ -10,12 +10,12 @@ script:
   - npm run build
 deploy:
   provider: pages
-  skip_cleanup: true
+  edge: true
   keep_history: true
   github_token: $GITHUB_TOKEN
   local_dir: dist/
   target_branch: gh-pages
   commit_message: "Deploy Release"
   on:
-    tags: true
     branch: master
+    tags: true
